--- a/gb/22/8/7/n13797464.md
+++ b/gb/22/8/7/n13797464.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>遭绑架第二天 法轮功学员李国勋被迫害致死</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/08/id13797604-2207211658011973-600x400.jpeg" />
 <h6>7月21日，法轮功学员在美国首都举行法轮功“7·20”反迫害23周年的游行中，悼念在大陆被迫害致死的法轮功修炼者。（戴兵／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年08月08日讯】（大纪者记者李洁思报导）据明慧网报导，河南周口市法轮功学员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E5%9B%BD%E5%8B%8B.md#1">李国勋</a>于7月18日被当地公安分局警察入室<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>，次日<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a>。</p>
-<p>70岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E5%9B%BD%E5%8B%8B.md#1">李国勋</a>曾当过兵，退休之前在周口市电业局任人事科科长。修炼法轮功后，他为官清正、谦卑、行善事，在周围人中口碑很好。</p>
-<p>今年7月18日上午11点多，八九个周口经济开发区公安分局警察闯入李国勋家，未出示任何证件，声称要开“二十大”了，有人举报李国勋发法轮功真相资料，随后非法抄家，抄走法轮功书籍、手机、电动车等私人物品，最后把李国勋与妻子<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%8E%E7%A7%80%E8%8B%B1.md#1">于秀英</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>到公安分局。</p>
-<p>次日晚上，在公安分局，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%8E%E7%A7%80%E8%8B%B1.md#1">于秀英</a>被告知，她丈夫病得很厉害（事实上人已离世）。当晚她回到家后，才从儿子那儿得知，李国勋已死，遗体在殡仪馆里。公安分局声称李国勋死于“突发性脑溢血”。</p>
+	<p>【大纪元2022年08月08日讯】（大纪者记者李洁思报导）据明慧网报导，河南周口市法轮功学员李国勋于7月18日被当地公安分局警察入室绑架，次日被迫害致死。</p>
+<p>70岁的李国勋曾当过兵，退休之前在周口市电业局任人事科科长。修炼法轮功后，他为官清正、谦卑、行善事，在周围人中口碑很好。</p>
+<p>今年7月18日上午11点多，八九个周口经济开发区公安分局警察闯入李国勋家，未出示任何证件，声称要开“二十大”了，有人举报李国勋发法轮功真相资料，随后非法抄家，抄走法轮功书籍、手机、电动车等私人物品，最后把李国勋与妻子于秀英绑架到公安分局。</p>
+<p>次日晚上，在公安分局，于秀英被告知，她丈夫病得很厉害（事实上人已离世）。当晚她回到家后，才从儿子那儿得知，李国勋已死，遗体在殡仪馆里。公安分局声称李国勋死于“突发性脑溢血”。</p>
 <p>于秀英说，“不可能，修炼二十多年我们就没有病过。为什么被绑架走一夜人就死了？他们也没让我见丈夫最后一面，直接火化。”</p>
 <p>中共自1999年迫害法轮功以来，实施“名誉上搞臭，经济上截断，肉体上消灭”“打死白打死，打死算自杀，不查身源，直接火化”的灭绝政策。中共不法人员绑架、关押法轮功学员或将法轮功学员以酷刑折磨致死后，谎称他们是病死的，而且很快把遗体运到殡仪馆迅速火化，企图湮灭证据。</p>
-<p>法轮功是佛家上乘修炼法门，1992年在中国大陆传出，至今已获得国际褒奖三千多项，上百个国家的民众走入修炼。广大修炼者按照“真、善、忍”的原则做，身心净化、道德回升。1999年7月20日，中共江泽民集团对法轮功发动迫害，至今外界已知姓名的4,830位法轮功学员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A2%AB%E8%BF%AB%E5%AE%B3%E8%87%B4%E6%AD%BB.md#1">被迫害致死</a>，实际的死亡人数远高于此。</p>
+<p>法轮功是佛家上乘修炼法门，1992年在中国大陆传出，至今已获得国际褒奖三千多项，上百个国家的民众走入修炼。广大修炼者按照“真、善、忍”的原则做，身心净化、道德回升。1999年7月20日，中共江泽民集团对法轮功发动迫害，至今外界已知姓名的4,830位法轮功学员被迫害致死，实际的死亡人数远高于此。</p>
 <p>近两年来，在中共的关押场所不断传出法轮功学员蹊跷离世的消息，包括一些法轮功修炼者在遭绑架后很快离世，而迫害者声称这些法轮功学员死于疾病。</p>
 <p>2019年1月11日一早，山东省招远市82岁的郭振香在公交车站给民众发放法轮功真相资料，被警察绑架到招远梦芝派出所。当日上午10时，她家人接到派出所的电话，说她已离世。派出所在没通知其家人的情况下已把遗体拉到殡仪馆，还欺骗郭振香的家人说，她生病上医院经抢救无效死亡。</p>
 <p>家人质疑，老人修炼法轮功以来一直身体健康，被抓到派出所的当天也无生病的迹象，仅仅几个小时就病死了？为何不经家人同意迅速把老人遗体拉到殡仪馆里？事后郭振香在外地工作的儿子带两位律师回招远要查明情况，结果律师被警察威胁逼退。</p>
@@ -20,8 +20,8 @@
 <p>石建伟的家属查看他的病例，发现他的三次血液化验单上，血检甲胎蛋白（afp）指数均正常，而肝癌的重要指标就是甲胎蛋白指数异常。家属质疑他的死因，监狱欲勒索其家人十万元尸检费并进行威胁，最终遗体被强行火化。</p>
 <p>2021年5月27日，长春市法轮功学员付贵华被非法判刑7年半后，被劫持到吉林女监八监区，不到两个月，于7月25日被害死。死前她被关押在“严管监室”43天，遭受酷刑折磨，后又被关入“攻坚室”。恶人不让她喝水、不让睡觉，仅三天她就离世了。</p>
 <p>监区长钱伟逼迫监室的所有人写假证明，说付贵华有病没说，因此病死了。付贵华的家人不相信此说法，坚持要调查，遗体仍被冰冻在殡仪馆里。监狱里的所有工作人员对她的死因、死亡过程、诊疗过程等等只字不提。今年7月初，监狱和付贵华的家人联系，目的是要尽快火化遗体。</p>
-<p>2019年11月6日，再次被非法判刑4年的黑河市孙吴县法轮功学员<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%A8%E7%AB%8B%E5%8D%8E.md#1">杨立华</a>在黑龙江省女子监狱被迫害致死。监狱通知家属称杨立华病重，等家属到医院看她时，人已经不行了，随后去世。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%A8%E7%AB%8B%E5%8D%8E.md#1">杨立华</a>的家属追问她的死亡原因，想看病例，监狱人员手拿着病例让家属看了一眼；家属不想火化遗体，但最后在威胁下只好签字将遗体火化。2022年7月有知情者向大纪元曝光，杨立华在狱中被狱警唆使的犯人组长打死。</p>
+<p>2019年11月6日，再次被非法判刑4年的黑河市孙吴县法轮功学员杨立华在黑龙江省女子监狱被迫害致死。监狱通知家属称杨立华病重，等家属到医院看她时，人已经不行了，随后去世。</p>
+<p>杨立华的家属追问她的死亡原因，想看病例，监狱人员手拿着病例让家属看了一眼；家属不想火化遗体，但最后在威胁下只好签字将遗体火化。2022年7月有知情者向大纪元曝光，杨立华在狱中被狱警唆使的犯人组长打死。</p>
 <p>在今年<span class="s1">“</span>7<span class="s1">·</span>20<span class="s1">”</span>法轮功学员反迫害23周年之际，许多国家的政要公开发声，谴责中共，要求立即停止迫害法轮功。</p>
 <p>7月20日，美国国会及行政当局中国委员会发推文，写道：“过去23年来，中国（中共）政府为了消灭法轮功，对法轮功学员实施了骇人听闻的人权侵害。”“这些人权侵害必须停止，必须释放所有被监禁的法轮功学员。”</p>
 <p>来自加拿大各党派的42名加拿大议员联名致函总理、外长，敦促联邦政府制止中共对法轮功学员的迫害。他们在信中指出：“我们注意到，压倒性的、确凿的、大量的证据证明，对法轮功的迫害仍然是当今中国大陆针对中国民众的规模最大、最暴力的运动，不仅是地区性的，也是全国范围的。”“现在是我们为他们（法轮功学员）发声的时候了。”</p>
@@ -29,45 +29,35 @@
 <p>资料来源：明慧网、大纪元</p>
 <p>责任编辑：高静#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/11/n13370209.md#1">法轮功学员刘亚芹被黑龙江女监迫害致死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/16/n13379414.md#1">76岁王桂英等三名法轮功学员被迫害致死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/18/n13587121.md#1">遭绑架不久 法轮功学员即被中共迫害致死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/30/n13682069.md#1">女法轮功学员被迫害致死 美议员谴责中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/11/n13370209.md#1">法轮功学员刘亚芹被黑龙江女监迫害致死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/16/n13379414.md#1">76岁王桂英等三名法轮功学员被迫害致死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/2/18/n13587121.md#1">遭绑架不久 法轮功学员即被中共迫害致死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/30/n13682069.md#1">女法轮功学员被迫害致死 美议员谴责中共</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md#1" target="_blank">印度媒体：成千上万人炼法轮功 深受裨益</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/15/n10394634.md#1" target="_blank">共产暴政录：抢教堂庙宇的献堂献庙</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/12/n11717665.md#1" target="_blank">国际人权日 美多位议员谴责中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923681.md#1">【古道人生】洗衣妇原来是武林高手 巧惩恶吏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946008.md#1">【热点互动】投资印度 郭台铭再战2024大选？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945959.md#1">【菁英论坛】冷眼看两会 李克强黯然退场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923489.md#1">【思想领袖】医生的谎言如何造就性别产业（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944711.md#1">习罕见批李克强？习李暗战三个细节引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944563.md#1">【秦鹏观察】GDP目标加“左右” 李克强泄密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944827.md#1">中共公布国务院机构重组方案 暂未涉公安国安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944500.md#1">老演员李琦京城摆摊卖烤肉 50元一串引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944672.md#1">心疼詹雅雯将3度开脑 大S具俊瞱与小S献花送暖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944433.md#1">孙俪大提琴考级试 自嘲紧张得脸红 网友笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944565.md#1">修杰楷40岁生日 贾静雯晒合照甜蜜告白</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13945104.md#1">两巨星隔空联动 周星驰喊话周杰伦“香港见”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917282.md#1">这一时间运动对心脏最好 2技巧令效果翻倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928982.md#1">抗癌延寿作用强大 石榴这样吃最有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943029.md#1">高度加工食物成瘾罹癌更致命 专家：3个方法戒断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943990.md#1">自然疗愈！照着步骤做 有望改善身体健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943910.md#1">微不足道的小善利己利人 让自己更幸福</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284224.md#1">《韩信》，我竟然看上了瘾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289092.md#1">【新闻大家谈】王维洛：洞庭湖决堤的前因后果</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289733.md#1">【菁英论坛】全民躺平反共 熬出新中国？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288249.md#1">市场疲软 传李嘉诚旗下东莞楼盘五折出售</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288521.md#1">大陆失业者比比皆是 80后博主大街上痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287995.md#1">成龙《传说》成本3.6亿 9小时票房仅61万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287290.md#1">TWICE子瑜今夏想挑战潜水 目标深度引来笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14288095.md#1">被问《长相思2》片酬谁最高 杨紫回答超搞笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287053.md#1">《比佛利山超级警探4》登台美及全球Netflix榜首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288317.md#1">吃水蜜桃如何快速去果核？ 试试这个妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287637.md#1">专家：随着年龄老化 你应该多吃这种食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274458.md#1">锻炼“天然护膝”让行动自如</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288470.md#1">哈佛研究：感恩让年长者活得更久</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280514.md#1">心律失常 手脚麻木 记得检查钾含量！</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/8/7/n13797464.htm">遭绑架第二天 法轮功学员李国勋被迫害致死</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/8/7/n13797464.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/8/7/n13797464.htm">遭绑架第二天 法轮功学员李国勋被迫害致死</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/8/7/n13797464.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
